--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,39 +66,47 @@ jobs:
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+        - name: Checkout
+          uses: actions/checkout@v3
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        - name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+        - name: Login to Amazon ECR
+          id: login-ecr
+          uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Pull latest image
-      run: |
-        docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        # 🔥 Clean up disk space before pulling new image
+        - name: Pre-clean Docker space
+          run: |
+            docker container prune -f
+            docker image prune -a -f
+            docker volume prune -f
+            docker builder prune -a -f
+            df -h
 
-    - name: Stop and remove old container (if exists)
-      run: |
-        docker ps -q --filter "name=studentperformance" | grep -q . && docker stop studentperformance && docker rm -fv studentperformance || true
+        - name: Pull latest image
+          run: |
+            docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-    - name: Run Docker Image to serve users
-      run: |
-        docker run -d -p 8080:8080 --ipc="host" --name=studentperformance \
-        -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-        -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-        -e AWS_REGION=${{ secrets.AWS_REGION }} \
-        ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        - name: Stop and remove old container (if exists)
+          run: |
+            docker ps -q --filter "name=studentperformance" | grep -q . && docker stop studentperformance && docker rm -fv studentperformance || true
 
-    - name: Aggressive Docker cleanup
-      run: |
-        docker container prune -f
-        docker image prune -a -f
-        docker volume prune -f
-        docker builder prune -a -f
+        - name: Run Docker Image to serve users
+          run: |
+            docker run -d -p 8080:8080 --ipc="host" --name=studentperformance \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+
+        # Optional: clean again after run to keep disk light
+        - name: Post-clean Docker space
+          run: |
+            docker system prune -af --volumes
+            df -h
